--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
         href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Gloock&family=Lora:ital,wght@0,600;1,400&family=Noto+Serif:wght@700&family=Playfair+Display&family=Poppins:wght@600&family=Tilt+Prism&family=Varela+Round&display=swap"
         rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Sarabun&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Bree+Serif&family=Crimson+Text&family=Domine&family=Labrada&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Bree+Serif&family=Crimson+Text&family=Domine&family=Labrada&family=Noticia+Text:wght@700&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Bree+Serif&family=Crimson+Text&family=DM+Serif+Display&family=Domine&family=Labrada&family=Noticia+Text:wght@700&display=swap" rel="stylesheet">
+
+
+
 </head>
 
 <body>
