--- a/prog_jrs/pmsr.html
+++ b/prog_jrs/pmsr.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="style.css">
     <!-- LOGO -->
-    <link rel="icon" href="img/Logo_Sekolah_SMKN_2_Jakarta-removebg-preview.png">
+    <link rel="icon" href="/img/Logo_Sekolah_SMKN_2_Jakarta-removebg-preview.png">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
     <section class="navigation" >
         <div class="nav-container">
             <div class="brand">
-                <img src="img/smk-Recovered.png" alt="">
+                <img src="/img/smk-Recovered.png" alt="">
             </div>
             <nav>
                 <div class="nav-mobile"><a id="navbar-toggle" href="#!"><span></span></a></div>
@@ -101,11 +101,12 @@
                 </p>
             </div>
             <div class="img-pplg">
-                <img src="/prog_jrs/New folder/WhatsApp Image 2023-02-27 at 11.32.34.jpeg" alt="">
+                <img src="/gambar/Dwi Mart 1.jpeg" alt="">
             </div>
         </div>
     </div>
 
+    <div class="hr"></div>
     <div class="foot_jrs">
         <img src="New folder/galeri/bdp 1.jpg" alt="">
     </div>
