--- a/prog_jrs/pplg.html
+++ b/prog_jrs/pplg.html
@@ -28,7 +28,7 @@
     <!-- STYLE.CSS -->
     <link rel="stylesheet" href="/style.css">
     <!-- LOGO -->
-    <link rel="icon" href="img/Logo_Sekolah_SMKN_2_Jakarta-removebg-preview.png">
+    <link rel="icon" href="/img/Logo_Sekolah_SMKN_2_Jakarta-removebg-preview.png">
 </head>
 
 <body>
@@ -42,10 +42,10 @@
 
 
     <!-- NAVBAR -->
-    <section class="navigation show" id="header">
+    <section class="navigation">
         <div class="nav-container">
             <div class="brand">
-                <img src="img/smk-Recovered.png" alt="">
+                <img src="/img/smk-Recovered.png" alt="">
             </div>
             <nav>
                 <div class="nav-mobile"><a id="navbar-toggle" href="#!"><span></span></a></div>
@@ -91,17 +91,17 @@
                     website, game dan semua yang berhubungan dengan pemrograman. Singkatnya, jurusan PPLG erat kaitannya
                     dengan coding, desain,
                     dan algoritma.
-                    <br></p>
+                    </p>
                 <div class="hr"></div>
                 <p class="super">
-                    Keunggulan <br>
+                    <b>Keunggulan</b> <br>
                     1. memiliki lab berbasis teknologi yang memudahkan siswa/siswi untuk melakukan kerja praktik.
                     <br>
                     2. dikelilingi lingkungan yang mendukung yang dapat meningkatkan peluang magang
                     <br>
                     3. memiliki guru yang berpengalaman dalam bidang IT
                     <br><br>
-                    prospek <br>
+                    <b>Prospek</b><br>
                     1. Karir modern yang berbasis kreativitas tata kelola dan pembuatan konten seperti content creator,
                     animasi, video game, dan user experience analyst. <br>
                     2. Karir yang dibutuhkan di era Industri 4.0 seperti Cloud engineer, Internet of Things engineer, AI
@@ -117,9 +117,9 @@
                 </p>
             </div>
             <div class="img-pplg">
-                <img src="/prog_jrs/New folder/WhatsApp Image 2023-02-27 at 11.32.34.jpeg" alt="">
+                <img src="/gambar/CyberSecurity.jpeg" alt="">
                 <div class="parag">
-                    <h3>Cyber Security</h3>
+                    <h3><b>Cyber Security</b></h3>
                     <p>Internet sangat rentan terhadap cyber attack atau kejahatan dunia maya, maka peran sekolah
                         dibutuhkan untuk memberikan
                         penyuluhan tentang cyber security atau kemanan siber dalam penggunaan internet dan media sosial
@@ -138,6 +138,7 @@
         </div>
     </div>
 
+    <div class="hr"></div>
     <div class="foot_jrs">
         <img src="New folder/galeri/pplg5.jpg" alt="">
     </div>
