--- a/jurusan.html
+++ b/jurusan.html
@@ -36,17 +36,18 @@
 
 <body>
     <!-- LOADER -->
-    <div id="loader-wrapper">
+    <!-- <div id="loader-wrapper">
         <h2 class="loding">Loading...</h2>
         <div id="loader"></div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
-    </div>
+    </div> -->
 
     <!-- NAVBAR -->
     <section class="navigation">
         <div class="nav-container">
-           <div class="brand">
+            <div class="brand">
+
                 <img src="img/smk-Recovered.png" alt="">
             </div>
             <nav>
@@ -107,10 +108,8 @@
                             <img src="gambar/CyberSecurity.jpeg" alt="">
                         </div>
                         <div class="body-card-jrs">
-                            <a href="/prog_jrs/pplg.html">
-                                <h1>Cyber Security</h1>
-                            </a>
-                            <p>Cyber Security program jurusan pplg dibutuhkan untuk memberikan penyuluhan tentang
+                            <h1>Cyber Security</h1>
+                                   <p>Cyber Security program jurusan pplg dibutuhkan untuk memberikan penyuluhan tentang
                                 keamanan cyber dalam penggunaan internet.</p>
                             <a href="prog_jrs/pplg.html"><button class="custom-btn btn-3"><span>Read
                                         More</span></button></a>
