--- a/prog_jrs/akl.html
+++ b/prog_jrs/akl.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PPLG</title>
+    <title>AKL</title>
     <!-- SCRIPT BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="style.css">
     <!-- LOGO -->
-    <link rel="icon" href="img/Logo_Sekolah_SMKN_2_Jakarta-removebg-preview.png">
+    <link rel="icon" href="/img/Logo_Sekolah_SMKN_2_Jakarta-removebg-preview.png">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
     <section class="navigation" >
         <div class="nav-container">
             <div class="brand">
-                <img src="img/smk-Recovered.png" alt="">
+                <img src="/img/smk-Recovered.png" alt="">
             </div>
             <nav>
                 <div class="nav-mobile"><a id="navbar-toggle" href="#!"><span></span></a></div>
@@ -103,11 +103,12 @@
                 </p>
             </div>
             <div class="img-pplg">
-                <img src="/prog_jrs/New folder/WhatsApp Image 2023-02-27 at 11.32.34.jpeg" alt="">
+                <img src="/gambar/Bank Mini 1.jpeg" alt="">
             </div>
         </div>
     </div>
 
+    <div class="hr"></div>
     <div class="foot_jrs">
         <img src="New folder/galeri/akl 1.jpg" alt="">
     </div>
